# openusage-wsl-dashboard

./: .gitignore  PROJECT_PLAN.md  README.md  main.py  pyproject.toml
backend/app/: main.py
backend/app/api/: routes_usage.py
backend/app/core/: cache.py  config.py  service.py
backend/app/models/: __init__.py  usage.py
backend/app/providers/: base.py  claude.py  codex.py  copilot.py  registry.py
backend/tests/: test_codex_provider.py  test_usage_api.py
docs/: IMPLEMENTATION_PLAN.md
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  app.css
frontend/src/components/: ProviderCard.tsx
frontend/src/lib/: provider-icons.ts  types.ts
scripts/: ensure-dashboard.sh
