[project]
name = "openusage-wsl-dashboard"
version = "0.1.0"
description = "WSL-first local AI usage dashboard for Codex, Claude, and Copilot"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "pydantic-settings>=2.10.1",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
pythonpath = ["backend"]
